# rhi-attempt

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
3rd/: CMakeLists.txt
core/include/xdBase/: blob.h  entrance.h  uuidGen.h
core/renderImpl/vk/: presMgr.cpp  presMgr.h  renderMgr.ixx  vkMgr.cpp  vkMgr.h
core/renderImpl/vk/gRes/buffer/: buffer.ixx  bufferLayout.ixx  bufferLayoutFormat.h  bufferResHolder.hpp  indexBuffer.ixx  vertexBuffer.ixx
core/src/: entrance.cpp  entrance.h  main.cpp
core/src/app/: appMgr.cpp  appMgr.h
core/src/app/event/: staticEventMgr.cpp  staticEventMgr.hpp
core/src/app/private/: appMgr.cpp
core/src/app/private/event/: staticEventMgr.cpp
core/src/app/private/util/: timeMgr.cpp
core/src/app/public/: appMgr.h
core/src/app/public/event/: staticEventMgr.hpp
core/src/app/public/util/: timeMgr.h
core/src/app/util/: timeMgr.cpp  timeMgr.h
core/src/asset/private/: asset.cpp  assetMgr.cpp  assetMgr.h
core/src/asset/public/: asset.h  assetMgr.h
core/src/asset/public/dynamic/: asssetStream.h
core/src/render/: gRes.cpp  gRes.h  presMgr.cpp  presMgr.h  vkMgr.cpp  vkMgr.h
core/src/render/bind/: bindBase.h
core/src/render/bind/buffer/: bufferBase.h  indexBuffer.cpp  indexBuffer.h
core/src/render/gRes/: gRes.cpp  gRes.h  pipeline.h  shader.h
core/src/render/gRes/buffer/: __template_instantiations.tpp  buffer.h  bufferLayout.h  bufferLayout.hpp  indexBuffer.h  vertexBuffer.h  vertexBuffer.hpp  vertexBuffer.hxx
core/src/render/impl/vk/: presMgr.cpp  presMgr.h  renderMgr.cpp  vkMgr.cpp
core/src/render/impl/vk/gRes/buffer/: buffer.cpp  buffer.ixx  bufferLayout.cpp  bufferLayout.ixx  bufferLayoutFormat.h  bufferResHolder.hpp  indexBuffer.cpp  indexBuffer.ixx  vertexBuffer.ixx
core/src/render/private/gRes/: gRes.cpp
core/src/render/private/gRes/buffer/: __template_instantiations.tpp  vertexBuffer.hxx
core/src/render/public/: renderMgr.h
core/src/render/public/gRes/: gRes.h  material.h  pipeline.h  shader.h  swapchain.h
core/src/render/public/gRes/buffer/: buffer.h  bufferLayout.hpp  indexBuffer.h  vertexBuffer.hpp  vertexBuffer.hxx
core/src/render/public/gRes/texture/: texture.h
core/src/util/private/: log.cpp  uuidGen.cpp
core/src/util/public/: blob.h  exce.h  log.h  uuidGen.h
res/: vcpkg.json.in
res/appRes/: res-map-default.json
